--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,11 @@ version: 2
 references:
   container_config: &container_config
     docker:
-      - image: ubuntu:bionic
+      - image: circleci/golang:1.11
 
   install_dependencies: &install_dependencies
     run:
       name: Install dependencies
-      environment:
-        # See minimum_otp_vsn in rebar.config
-        OTP_VERSION: "20.1"
       command: |
         sudo apt-get update
 
