--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ references:
   container_config: &container_config
     docker:
       - image: circleci/golang:1.11
-    working_directory: ~/project
+
 
   update_submodules: &update_submodules
     run:
@@ -43,6 +43,8 @@ references:
       command: |
         cd terraform-website
 
+        make website &
+
         exit 1
 
         # Create volumes with content
@@ -61,7 +63,6 @@ references:
         --volumes-from website \
         hashicorp/middleman-hashicorp:0.3.35
 
-        #        make website &
         echo "Wait for site to start"
         sleep 5
 
@@ -82,7 +83,9 @@ references:
 
 jobs:
   build_all:
-    <<: *container_config
+    machine: true
+    working_directory: ~/project
+    # <<: *container_config
     steps:
       - checkout
       - setup_remote_docker
