--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,6 @@ references:
 
         sudo apt-get install patch ghostscript nano
 
-        pwd
-
         # Install wkhtmltopdf
         mkdir wkhtmltopdf_download
         cd wkhtmltopdf_download
@@ -29,6 +27,12 @@ references:
         sudo dpkg -i ./wkhtmltox_0.12.5-1.trusty_amd64.deb || sudo apt-get --fix-broken install
         cd ..
         rm -rf wkhtmltopdf_download/
+
+        # Install git-lfs - https://github.com/git-lfs/git-lfs/wiki/Installation#ubuntu
+        sudo add-apt-repository ppa:git-core/ppa -y
+        curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
+        sudo apt-get install git-lfs
+        git lfs install
 
         # verify versions
         grep --version
@@ -47,8 +51,8 @@ references:
 
         make website &
 
-        echo "Wait for site to start"
-        sleep 10
+        echo "Wait for site to start (30 minimum, sometimes internet may be slow)"
+        sleep 30
 
         # Code from https://stackoverflow.com/a/42873372/550451
         curl --fail \
@@ -62,6 +66,9 @@ references:
   generate_all: &generate_all
     run:
       name: Generate all
+      environment:
+        GIT_USER_EMAIL: anton+betajobot@antonbabenko.com
+        GIT_USER_NAME: betajobot
       command: |
         ./bin/generate.sh
 
